welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:6: error: type mismatch;
 found   : Unit
 required: Boolean
			if (c=d) {0} 
                             ^close10:6: error: type mismatch;
 found   : Unit
 required: Int
			if (c=d) {0} 
                        ^